Closed
Bug 1079621
Opened 11 years ago
Closed 11 years ago
Intermittent test_conformance__textures__tex-image-and-sub-image-2d-with-video.html | Assertion count 1 is greater than expected range (ASSERTION: Couldn't pass frame to decoder: 'Error', file content/media/fmp4/apple/AppleVTDecoder.cpp, line 243)
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla36
| Tracking | Status | |
|---|---|---|
| firefox33 | --- | unaffected |
| firefox34 | --- | wontfix |
| firefox35 | --- | fixed |
| firefox36 | --- | fixed |
| firefox-esr31 | --- | unaffected |
People
(Reporter: RyanVM, Assigned: jya)
Details
(Keywords: assertion, intermittent-failure)
Attachments
(4 files, 2 obsolete files)
|
2.35 KB,
patch
|
kinetik
:
review+
lmandel
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
|
2.30 KB,
patch
|
Details | Diff | Splinter Review | |
|
2.34 KB,
patch
|
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
|
1.41 KB,
patch
|
lmandel
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
https://tbpl.mozilla.org/php/getParsedLog.php?id=48649907&tree=Mozilla-Central
Rev5 MacOSX Mountain Lion 10.8 mozilla-central debug test mochitest-2 on 2014-09-22 21:08:12 PDT for push 603dad513d7c
slave: talos-mtnlion-r5-023
21:25:29 INFO - [Parent 1291] WARNING: VideoToolbox decoder returned no data: file /builds/slave/m-cen-osx64-d-0000000000000000/build/content/media/fmp4/apple/AppleVTDecoder.cpp, line 165
21:25:29 INFO - [Parent 1291] ###!!! ASSERTION: Couldn't pass frame to decoder: 'Error', file /builds/slave/m-cen-osx64-d-0000000000000000/build/content/media/fmp4/apple/AppleVTDecoder.cpp, line 243
21:25:30 INFO - JavaScript error: jar:file:///builds/slave/talos-slave/test/build/application/FirefoxNightlyDebug.app/Contents/MacOS/omni.ja!/components/nsHandlerService.js, line 891: NS_ERROR_FAILURE: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIProperties.get]
21:25:45 INFO - JavaScript error: jar:file:///builds/slave/talos-slave/test/build/application/FirefoxNightlyDebug.app/Contents/MacOS/omni.ja!/components/nsHandlerService.js, line 891: NS_ERROR_FAILURE: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIProperties.get]
21:25:56 INFO - nsRunnableMethodImpl<tag_nsresult (mozilla::AppleVTDecoder::*)(mp4_demuxer::MP4Sample*), nsAutoPtr<mp4_demuxer::MP4Sample>, true>::Run() [xpcom/glue/nsThreadUtils.h:363]
21:25:56 INFO - mozilla::MediaTaskQueue::Runner::Run() [mfbt/RefPtr.h:301]
21:25:56 INFO - nsThreadPool::Run() [xpcom/glue/nsCOMPtr.h:520]
21:25:56 INFO - _ZThn8_N12nsThreadPool3RunEv [obj-firefox/xpcom/threads/Unified_cpp_xpcom_threads0.cpp:234]
21:25:56 INFO - nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:823]
21:25:56 INFO - NS_ProcessNextEvent(nsIThread*, bool) [xpcom/glue/nsThreadUtils.cpp:265]
21:25:56 INFO - mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:339]
21:25:56 INFO - MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:509]
21:25:56 INFO - nsThread::ThreadFunc(void*) [xpcom/threads/nsThread.cpp:359]
21:25:57 INFO - _pt_root [nsprpub/pr/src/pthreads/ptthread.c:215]
21:25:57 INFO - libsystem_c.dylib + 0x14782
21:25:57 INFO - OpenGL version detected: 210
21:25:57 INFO - OpenGL vendor: Intel Inc.
21:25:57 INFO - OpenGL renderer: Intel HD Graphics 3000 OpenGL Engine
21:25:57 INFO - [Parent 1291] WARNING: We can't support non-premultiplied alpha for video!: '(aSurfaceFlags & SFE_PREFER_NO_PREMULTIPLY_ALPHA) == 0', file /builds/slave/m-cen-osx64-d-0000000000000000/build/layout/base/nsLayoutUtils.cpp, line 5901
21:25:57 INFO - [Parent 1291] WARNING: We can't support non-premultiplied alpha for video!: '(aSurfaceFlags & SFE_PREFER_NO_PREMULTIPLY_ALPHA) == 0', file /builds/slave/m-cen-osx64-d-0000000000000000/build/layout/base/nsLayoutUtils.cpp, line 5901
21:25:57 INFO - [Parent 1291] WARNING: We can't support non-premultiplied alpha for video!: '(aSurfaceFlags & SFE_PREFER_NO_PREMULTIPLY_ALPHA) == 0', file /builds/slave/m-cen-osx64-d-0000000000000000/build/layout/base/nsLayoutUtils.cpp, line 5901
21:25:57 INFO - [Parent 1291] WARNING: We can't support non-premultiplied alpha for video!: '(aSurfaceFlags & SFE_PREFER_NO_PREMULTIPLY_ALPHA) == 0', file /builds/slave/m-cen-osx64-d-0000000000000000/build/layout/base/nsLayoutUtils.cpp, line 5901
21:25:57 INFO - 1040 INFO TEST-OK | /tests/dom/canvas/test/webgl-conformance/_wrappers/test_conformance__textures__tex-image-and-sub-image-2d-with-video.html | took 8638ms
21:25:57 INFO - [Parent 1291] WARNING: Failed to unlock the wakelock.: '!rv.Failed()', file /builds/slave/m-cen-osx64-d-0000000000000000/build/content/html/content/src/HTMLVideoElement.cpp, line 245
21:25:57 INFO - ++DOMWINDOW == 32 (0x125db4c00) [pid = 1291] [serial = 2682] [outer = 0x124483400]
21:25:57 INFO - 1041 INFO TEST-UNEXPECTED-ERROR | /tests/dom/canvas/test/webgl-conformance/_wrappers/test_conformance__textures__tex-image-and-sub-image-2d-with-video.html | Assertion count 1 is greater than expected range 0-0 assertions.
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → jyavenard
| Assignee | ||
Updated•11 years ago
|
Version: Trunk → 34 Branch
| Assignee | ||
Comment 1•11 years ago
|
||
should I still apply this fix for the 34/beta branch ?
Flags: needinfo?(ryanvm)
| Assignee | ||
Comment 3•11 years ago
|
||
Backported for 34 branch
Attachment #8504431 -
Flags: review?(kinetik)
Updated•11 years ago
|
Attachment #8504431 -
Flags: review?(kinetik) → review+
| Assignee | ||
Comment 4•11 years ago
|
||
Comment on attachment 8504431 [details] [diff] [review]
Return error instead of asserting
Approval Request Comment
[Feature/regressing bug #]:1043696
[User impact if declined]:will fail mochitest and may cause crashes
[Describe test coverage new/current, TBPL]:code has been in use in nightly for a month
[Risks and why]: can't foresee any.
[String/UUID change made/needed]: none
Attachment #8504431 -
Flags: approval-mozilla-beta?
Updated•11 years ago
|
status-firefox34:
--- → affected
Updated•11 years ago
|
status-firefox33:
--- → unaffected
Comment 5•11 years ago
|
||
Comment on attachment 8504431 [details] [diff] [review]
Return error instead of asserting
Beta+
Attachment #8504431 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
| Reporter | ||
Comment 6•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
| Reporter | ||
Comment 7•11 years ago
|
||
Wait a sec, this was the spinoff from bug 1069005. The beta patch here was for that one, no?
status-firefox36:
--- → affected
Target Milestone: mozilla35 → ---
| Reporter | ||
Updated•11 years ago
|
Status: RESOLVED → REOPENED
Flags: needinfo?(jyavenard)
Resolution: FIXED → ---
| Assignee | ||
Comment 8•11 years ago
|
||
the patch here is for beta (well, it was for aurora, but that one became beta in the mean time)...
bug 1069005 was for nightly, but it got fixed as a side effect of resolving bug 1066369, which couldn't be applied without rewrite on aurora (now beta)
Hope that makes sense...
So it's all good :)
Flags: needinfo?(jyavenard)
| Reporter | ||
Comment 9•11 years ago
|
||
But the patch here fixed the "Couldn't pass frame to decoder: 'rv == noErr'" assert bug 1066369 was filed for, not the "Couldn't pass frame to decoder: 'Error'" assert (on trunk no less) that this was spun off for.
| Reporter | ||
Comment 10•11 years ago
|
||
s/1066369/1069005
| Assignee | ||
Comment 11•11 years ago
|
||
I see.
They are both fixed with this patch... 3 potential assertions were removed...
Why it asserted may have been for different reasons, but the end result was the same: it was a simple error and should have been treated as such.
| Reporter | ||
Comment 12•11 years ago
|
||
It's confusing because bug 1069005 comment 3 (what this bug was filed for) happened on trunk after bug 1066369 landed.
| Assignee | ||
Comment 13•11 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM UTC-4] from comment #12)
> It's confusing because bug 1069005 comment 3 (what this bug was filed for)
> happened on trunk after bug 1066369 landed.
I'm tracking the revision on that file.
I don't even see what could could have ever created that assertion...
unless NS_ERROR cause an assertion as far as the test bot are concerned. Ah yes it does in debug mode...
Then yes, you're right, that patch applies to bug 1066369 and that should still be uplifted to beta IMHO...
Why the Apple decoder fails at random from time to time is still unexplained... but the error is usually recovered after the next packet and isn't a problem per say... not much we can do about it
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Reporter | ||
Comment 19•11 years ago
|
||
I think there's enough hits here to prove the point now that this is still an ongoing issue independent of bug 1066369.
Flags: needinfo?(jyavenard)
| Assignee | ||
Comment 20•11 years ago
|
||
Make non-fatal errors warnings only.
Attachment #8517783 -
Flags: review?(giles)
Comment 21•11 years ago
|
||
Comment on attachment 8517783 [details] [diff] [review]
Change non-fatal errors to warnings, fatal ones to errors
Review of attachment 8517783 [details] [diff] [review]:
-----------------------------------------------------------------
The theory is that NS_ERROR() triggers an assertion in debug builds, which tinderbox reports as a failure. NS_WARNING calls NS_DebugBreak, but the lower severity skips invoking the debugger. Please put that in the body of your commit message and fix the summary. The whole point of the patch is to _not_ make the fatal ones errors.
I still have reservations about papering over the issue like this, but I suppose it's better to fix the intermittent test failures. r=me with the commit message fixed.
Attachment #8517783 -
Flags: review?(giles) → review+
Comment 22•11 years ago
|
||
Commit message should be like:
Bug 1079621: Change non-fatal errors to warnings. r=rillian
This resolves intermittent failures in continuous integration.
NS_ERROR() triggers an assertion in debug builds, which tinderbox
reports as a failure. NS_WARNING calls NS_DebugBreak, but with the
lower severity level it skips invoking the debugger.
| Assignee | ||
Comment 23•11 years ago
|
||
Carrying r+
| Assignee | ||
Updated•11 years ago
|
Attachment #8517783 -
Attachment is obsolete: true
| Assignee | ||
Updated•11 years ago
|
Flags: needinfo?(jyavenard)
Keywords: checkin-needed
Comment 24•11 years ago
|
||
Keywords: checkin-needed
Comment 25•11 years ago
|
||
Comment 26•11 years ago
|
||
Status: REOPENED → RESOLVED
Closed: 11 years ago → 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
| Reporter | ||
Comment 27•11 years ago
|
||
Can we land this on Aurora/Beta please? Seems pretty low-risk :)
| Reporter | ||
Updated•11 years ago
|
Flags: needinfo?(jyavenard)
| Assignee | ||
Updated•11 years ago
|
Attachment #8504431 -
Attachment is obsolete: true
| Assignee | ||
Comment 29•11 years ago
|
||
rename patch file. Simple backport to already r+ patch
| Assignee | ||
Updated•11 years ago
|
Attachment #8504431 -
Attachment is obsolete: false
Flags: needinfo?(jyavenard)
| Assignee | ||
Updated•11 years ago
|
Attachment #8521075 -
Attachment is obsolete: true
Attachment #8521075 -
Flags: review?(giles)
| Assignee | ||
Comment 30•11 years ago
|
||
Backport for beta
| Assignee | ||
Comment 31•11 years ago
|
||
Comment on attachment 8521077 [details] [diff] [review]
Aurora: Change non-fatal errors to warnings
Approval Request Comment
[Feature/regressing bug #]:1043696
[User impact if declined]:will fail mochitest and may cause crashes
[Describe test coverage new/current, TBPL]:code has been in use in nightly for a month
[Risks and why]: can't foresee any.
[String/UUID change made/needed]: none
Attachment #8521077 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 32•11 years ago
|
||
Comment on attachment 8521082 [details] [diff] [review]
Beta: Change non-fatal errors to warnings
Approval Request Comment
[Feature/regressing bug #]:1043696
[User impact if declined]:will fail mochitest and may cause crashes
[Describe test coverage new/current, TBPL]:code has been in use in nightly for a month
[Risks and why]: can't foresee any.
[String/UUID change made/needed]: none
Attachment #8521082 -
Flags: approval-mozilla-beta?
Comment 33•11 years ago
|
||
Comment on attachment 8521082 [details] [diff] [review]
Beta: Change non-fatal errors to warnings
Beta's crash rate is in a good range for release. Without knowing that this causes frequent or serious crashes I suggest that even though this is a simple change that we ship it in 35. Please renom if you really think this fix should ship in 34.
Attachment #8521082 -
Flags: approval-mozilla-beta? → approval-mozilla-beta-
| Reporter | ||
Updated•11 years ago
|
Updated•11 years ago
|
Attachment #8521077 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Reporter | ||
Comment 34•11 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•